--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
             </div>
             <div class="header__actions" data-da=".menu__body, 767.98">
               <div class="header__social">
-                <a href="https://t.me/goggleseth" target="_blank" class="header__social-item">
+                <a href="https://t.me/TurboSolPenguin" target="_blank" class="header__social-item">
                   <svg xmlns="http://www.w3.org/2000/svg" width="32" height="27" viewBox="0 0 32 27" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M28.5513 0.339791C28.943 0.17814 29.3716 0.122388 29.7926 0.178336C30.2137 0.234285 30.6117 0.399889 30.9453 0.657912C31.279 0.915936 31.536 1.25695 31.6896 1.64545C31.8433 2.03395 31.888 2.45574 31.819 2.86692L28.2249 24.248C27.8763 26.3105 25.5689 27.4932 23.6404 26.4659C22.0271 25.6064 19.6311 24.2822 17.4759 22.9006C16.3983 22.2089 13.0974 19.9942 13.503 18.4182C13.8517 17.0708 19.3981 12.0072 22.5675 8.99668C23.8115 7.81394 23.2442 7.13164 21.7752 8.21958C18.1272 10.9208 12.2701 15.0285 10.3336 16.1849C8.62534 17.2044 7.73474 17.3785 6.66982 17.2044C4.72698 16.8874 2.92518 16.3962 1.45458 15.7979C-0.532636 14.9897 -0.43597 12.3102 1.45299 11.53L28.5513 0.339791Z" fill="black"></path>
                   </svg>
                 </a>
-                <a href="https://x.com/goggleseth" target="_blank" class="header__social-item">
+                <a href="https://x.com/TurboSolPenguin" target="_blank" class="header__social-item">
                   <svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" viewBox="0 0 30 25" fill="none">
                     <path d="M23.2223 0.0180664L27.5781 0.0180664L18.0617 10.5938L29.2577 24.982H20.4917L13.6266 16.2545L5.76965 24.982H1.41151L11.5908 13.6698L0.850464 0.0192172L9.83898 0.0192172L16.0448 7.99644L23.2223 0.0180664ZM21.6943 22.448H24.1077L8.52751 2.41975H5.93772L21.6943 22.448Z" fill="black"></path>
                   </svg>
                 </a>
               </div>
-              <a href="https://app.pump.fun/#/swap?inputCurrency=eth&outputCurrency=0x28637Af03e06f9990249d6738b25b55475100A63&chain=mainnet" target="_blank" class="header__button">BUY NOW!</a>
+              <a href="https://pump.fun/coin/CWVPu2HCcF91oqpcG6mKsBCuE65Cz6i9skR1xP7Apump" target="_blank" class="header__button">BUY NOW!</a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
                   Artwork inspired by original images from @0xfuneral
                 </div>
               </div>
-              <a href="https://app.pump.fun/#/swap?inputCurrency=eth&outputCurrency=0x28637Af03e06f9990249d6738b25b55475100A63&chain=mainnet" target="_blank" class="hero__button">BUY NOW!</a>
+              <a href="https://pump.fun/coin/CWVPu2HCcF91oqpcG6mKsBCuE65Cz6i9skR1xP7Apump" target="_blank" class="hero__button">BUY NOW!</a>
               <div class="hero__bottom-item"></div>
             </div>
           </div>
@@ -212,7 +212,7 @@
                     </ul>
                     <p>
                       How to buy:
-                      <a href="https://app.pump.fun/#/swap?inputCurrency=eth&outputCurrency=0x28637Af03e06f9990249d6738b25b55475100A63&chain=mainnet" target="_blank">Buy on Pump.fun</a>
+                      <a href="https://pump.fun/coin/CWVPu2HCcF91oqpcG6mKsBCuE65Cz6i9skR1xP7Apump" target="_blank">Buy on Pump.fun</a>
                     </p>
                   </div>
                 </div>
@@ -349,7 +349,7 @@
                       </div>
                       <div class="tokenomics__item">
                         <span>CA</span>
-                        <span>Renounced</span>
+                        <span>CWVPu2HCcF91oqpcG6mKsBCuE65Cz6i9skR1xP7Apump</span>
                       </div>
                       <div class="tokenomics__row-img">
                         <img src="images/arrow2.svg" alt="Arrow">
@@ -362,12 +362,12 @@
                 <div class="tokenomics__ca">
                   <span>CA:</span>
                   <button type="button" class="copy-ca-btn">
-                    0x28637Af03e06f9990249d6738b25b55475100A63
+                    CWVPu2HCcF91oqpcG6mKsBCuE65Cz6i9skR1xP7Apump
                   </button>
                 </div>
                 <div class="tokenomics__how">
                   How to buy:
-                  <a target="_blank" href="https://app.pump.fun/#/swap?inputCurrency=eth&outputCurrency=0x28637Af03e06f9990249d6738b25b55475100A63&chain=mainnet">Buy On Pump.fun</a>
+                  <a target="_blank" href="https://pump.fun/coin/CWVPu2HCcF91oqpcG6mKsBCuE65Cz6i9skR1xP7Apump">Buy On Pump.fun</a>
                 </div>
               </div>
             </div>
@@ -381,18 +381,18 @@
             <div class="join__body">
               <div class="join__header" data-watch-threshold="0.75" data-watch-once="" data-watch="">
                 <h2 class="join__title">Join Us</h2>
-                <a href="https://app.pump.fun/#/swap?inputCurrency=eth&outputCurrency=0x28637Af03e06f9990249d6738b25b55475100A63&chain=mainnet" target="_blank" class="join__button">
+                <a href="https://pump.fun/coin/CWVPu2HCcF91oqpcG6mKsBCuE65Cz6i9skR1xP7Apump" target="_blank" class="join__button">
                   BUY NOW!
                 </a>
               </div>
               <div class="join__socail">
-                <a href="https://x.com/goggleseth" target="_blank" class="join__social-item">
+                <a href="https://x.com/TurboSolPenguin" target="_blank" class="join__social-item">
                   <img src="images/x.svg" alt="X">
                 </a>
-                <a href="https://t.me/goggleseth" target="_blank" class="join__social-item">
+                <a href="https://t.me/TurboSolPenguin" target="_blank" class="join__social-item">
                   <img src="images/tel.svg" alt="Telegram">
                 </a>
-                <a href="https://dexscreener.com/ethereum/0x28637Af03e06f9990249d6738b25b55475100A63" target="_blank" class="join__social-item">
+                <a href="#" target="_blank" class="join__social-item">
                   <img src="images/dex.svg" alt="Dex">
                 </a>
               </div>
@@ -427,10 +427,10 @@
                     <a href="#" data-goto=".join" class="footer__top-menu-item">Contacts</a>
                   </div>
                   <div class="footer__top-menu-social">
-                    <a href="https://t.me/goggleseth" target="_blank" class="footer__top-menu-social-item">
+                    <a href="https://t.me/TurboSolPenguin" target="_blank" class="footer__top-menu-social-item">
                       <img src="images/tel.png" alt="Logo">
                     </a>
-                    <a href="https://x.com/goggleseth" target="_blank" class="footer__top-menu-social-item">
+                    <a href="https://x.com/TurboSolPenguin" target="_blank" class="footer__top-menu-social-item">
                       <img src="images/x.png" alt="Logo">
                     </a>
                     
