--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>SOLGI</title>
+    <title>SOLGU</title>
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <style>
@@ -19,8 +19,8 @@
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@SOLGI_SONIC">
-    <meta name="twitter:title" content="THE SOLGI STAY ON">
+    <meta name="twitter:site" content="@SOLGU_SONIC">
+    <meta name="twitter:title" content="THE SOLGU STAY ON">
     <meta name="twitter:description" content="SONIC FAST BOI. THEY STAY ON.">
     <meta name="twitter:image" content="/img/profile_images/N9duWS9R_400x400.jpg">
 
@@ -29,9 +29,9 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:image" content="images/N9duWS9R_400x400.jpg">
     <meta property="og:type" content="site">
-    <meta property="og:site_name" content="SOLGI">
+    <meta property="og:site_name" content="SOLGU">
     <meta property="og:url" content="/">
-    <meta property="og:title" content="THE SOLGI STAY ON">
+    <meta property="og:title" content="THE SOLGU STAY ON">
     <meta name="description" content="SONIC FAST BOI. THEY STAY ON.">
   </head>
 
@@ -190,7 +190,7 @@
                 <div class="item-about__header">
                   <div class="item-about__header-top">
                     <img src="images/h1.svg" alt="Icon">
-                    <span>About "Solgi"</span>
+                    <span>About "Solgu"</span>
                     <img src="images/h2.svg" alt="Icon">
                   </div>
                   <div class="item-about__header-bottom">
@@ -201,7 +201,7 @@
                 </div>
                 <div class="item-about__body">
                   <div class="item-about__body-info">
-                    <h2>About Solgi</h2>
+                    <h2>About Solgu</h2>
                     <p>SONIC FAST BOI. THEY STAY ON.</p>
                     <ul>
                       <li>Only on Solana</li>
@@ -270,7 +270,7 @@
                   <div class="item-how__num">2</div>
                   <div class="item-how__text">
                     Get SOL <br>
-                    Have SOL in your wallet to switch to SOLGI. If you don’t
+                    Have SOL in your wallet to switch to SOLGU. If you don’t
                     have any SOL you can buy directly on your wallet, transfer
                     from another wallet, or buy on another exchange and send it
                     to your wallet.
@@ -296,10 +296,10 @@
                   <div class="item-how__text">
                     Buy on Pump.fun <br>
                     Go to pump.fun in google chrome or on the browser inside
-                    your wallet app. Connect your wallet. Paste the SOLGI
+                    your wallet app. Connect your wallet. Paste the SOLGU
                     token address click buy and confirm.
                     <br>
-                    Follow Solgi on X and hop in the Telegram to party with
+                    Follow Solgu on X and hop in the Telegram to party with
                     the community!
                   </div>
                 </div>
